(library
 (name asdf_kvs)
 (public_name asdf-kvs)
 (modules lexer parser interpreter storage)
 (wrapped false))

(executable
 (name main)
 (modules main)
 (libraries asdf_kvs))

(executable
 (name repl)
 (modules repl)
 (libraries asdf_kvs))

(executable
 (name server)
 (modules server)
 (libraries asdf_kvs unix threads.posix))

(executable
 (name client)
 (modules client)
 (libraries unix))
